<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="greeaccount_read_permission">com.gree.provider.account.user.read</string>
    <string name="greeaccount_write_permission">com.gree.provider.account.user.write</string>
    <string name="address_write_permission">com.gree.provider.account.address.write</string>
    <string name="address_read_permission">com.gree.provider.account.address.read</string>
    <string name="api_permission">com.gree.greeaccount.api</string>
    <string name="app_name">格力账号</string>
    <string name="cancel">取消</string>
    <string name="agree">同意</string>
    <string name="login">登录</string>
    <string name="confim">确定</string>
    <string name="send">发送</string>
    <string name="register">注册</string>
    <string name="ok">完成</string>
    <string name="next_step">下一步</string>
    <string name="male_text">男</string>
    <string name="female_text">女</string>
    <string name="net_error">异常</string>
    <string name="grally_error">图库不可用</string>
    <string name="camera_error">相机不可用</string>
    <string name="no_emoji">不可输入表情符</string>
    <string name="no_chinese">不可输入中文</string>
    <string name="max_length">已达到最大长度</string>
    <string name="phone_error">手机号格式不正确</string>
    <string name="rsp_token_error">认证token无效,请从新登录</string>
    <string name="rsp_token_invalid">认证信息无效</string>
    <string name="rsp_sms_error">验证码无效</string>
    <string name="rsp_account_no_ex">用户不存在</string>
    <string name="rsp_to_auth_error">身份认证失败</string>
    <string name="rsp_auth_error">不同用户越权操作</string>
    <string name="rsp_phone_check_error">手机号验证不一致</string>
    <string name="rsp_phone_has_bind">手机号被绑定</string>
    <string name="rsp_token_reflash">刷新令牌无效</string>
    <string name="rsp_email_has_bind">邮箱被绑定</string>
    <string name="rsp_account_error">账号信息不一致，无法修改设备昵称</string>
    <string name="rsp_logout">设备强制退出</string>
    <string name="rsp_pwd_reset">密码已被重置</string>
    <string name="rsp_account_name_error">用户名格式不正确</string>
    <string name="rsp_account_name_only_one">用户名只能修改一次</string>
    <string name="logout_alert">登录异常提示</string>
    <string name="logout_alert_content">你的格力账号\"<xliff:g id="account">%1$s</xliff:g>\"于 <xliff:g id="time">%2$s</xliff:g> 已超过登录允许上限。如果这不是你的操作，你的密码很可能已泄漏。请尽快登录格力手机账号修改密码，或通过浏览器访问 http://phone.gree.com ,登录账号进行操作。</string>
    <string name="logout_num_out_alert_content">你的格力账号\"<xliff:g id="account">%1$s</xliff:g>\"于 <xliff:g id="time">%2$s</xliff:g> 被要求退出登录。如果这不是你的操作，你的密码很可能已泄露。请尽快登录格力手机账号后修改密码，或通过浏览器访问 http://phone.gree.com ,登录账号进行操作。</string>
    <string name="logout_pwd_reset_alert_content">你的格力账号\"<xliff:g id="account">%1$s</xliff:g>\"于 <xliff:g id="time">%2$s</xliff:g> 密码被修改。如果这不是你的操作，你的密码很可能已泄露。请尽快登录格力手机账号后修改密码，或通过浏览器访问 http://phone.gree.com ,登录账号进行操作。</string>
    <string name="pwd_reset_alert_content">你的密码已修改</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="reget_auth_code">重新获取</string>
    <string name="permissions_title">程序在运行过程中，需要用到读取短信验证码和获得手机序列号的权限，跳转获取</string>
    <string name="no_app_active">无对应应用</string>
    <string name="user_agreement">用户协议</string>
    <string name="alert_notice_item_1">1.本软件使用过程中需要连接网络，产生的流量费用将由运营商之间收取，详情请咨询你所属的运营商。</string>
    <string name="alert_notice_item_2">2.本软件在使用过程中，在经过你同意的前提下会采集您的地理位置和联系人信息，用于提供更优的生活服务。</string>
    <string name="alert_notice_item_3">3.使用该软件即表示你同意接受格力用户许可协议和格力隐私政策。</string>
    <string name="alert_notice_item_3_start">3.使用该软件即表示你同意接受</string>
    <string name="gree_user_agreement">格力用户许可协议</string>
    <string name="and">和</string>
    <string name="gree_privacy_policy">格力隐私政策</string>
    <string name="date_fomat_year">年</string>
    <string name="date_fomat_moth">月</string>
    <string name="date_fomat_day">日</string>
    <string name="first_title">登录账号可享受更多服务</string>
    <string name="first_gree_cloud">格力云</string>
    <string name="first_gree_cloud_des">即将上线...</string>
    <string name="first_gree_findphone">查找手机</string>
    <string name="first_gree_findphone_des">手机丢失远程锁机</string>
    <string name="first_gree_feedback">售后服务</string>
    <string name="first_gree_feedback_des">手机售后问题专人服务</string>
    <string name="first_gree_bbs">格力论坛</string>
    <string name="first_gree_bbs_des">掌握最新格力手机资讯</string>
    <string name="password_rule">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="account_name_rule">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="register_gree_account">注册格力账号</string>
    <string name="input_phone">输入手机号</string>
    <string name="input_email">输入邮箱号</string>
    <string name="input_account">手机号码/邮箱号/用户名</string>
    <string name="has_read_agree_agreement">我已阅读并同意</string>
    <string name="user_register_agreement">用户注册协议</string>
    <string name="input_sms_code">输入验证码</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="pwd_set">密码设置</string>
    <string name="pwd_type">为提高账号安全，请混合使用字母、数字、符号</string>
    <string name="pwd_lenght">密码长度需要6-30位字符</string>
    <string name="input_pwd">输入密码</string>
    <string name="reigster_problem">注册遇到问题</string>
    <string name="has_registered">账号已注册</string>
    <string name="no_registered">账号未注册</string>
    <string name="confim_pwd">再次确认密码</string>
    <string name="pwd_error">密码格式不正确</string>
    <string name="pwd_error_to_mush">错误太多，请等待30秒</string>
    <string name="pwd_error_foget">你可能真的忘记了，休息一下</string>
    <string name="confim_pwd_error">确认密码不正确</string>
    <string name="sms_code_error">验证码格式不正确</string>
    <string name="agree_the_agreement">请勾选用户注册协议</string>
    <string name="login_gree_account">登录格力账号</string>
    <string name="login_register_width_problem">登录/注册遇到问题</string>
    <string name="login_width_problem">登录遇到问题?</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_bind_phone">请输入绑定的手机号</string>
    <string name="find_pwd_by_email">邮箱找回密码</string>
    <string name="input_bind_email">请输入绑定的邮箱号</string>
    <string name="email_error">邮箱格式不正确</string>
    <string name="email_send_ok_title">激活通知</string>
    <string name="email_send_ok_tip_start">我们已向邮箱“</string>
    <string name="email_send_ok_tip">我们已向邮箱“<xliff:g id="email">%1$s</xliff:g>”发送了一封验证邮件。点击邮件链接即可验证.</string>
    <string name="i_know">知道了</string>
    <string name="find_pwd_by_phone">使用手机找回</string>
    <string name="problem_find_pwd">找回密码</string>
    <string name="problem_find_pwd_des">通过绑定账号的安全资料找回</string>
    <string name="problem_common">常见问题</string>
    <string name="problem_common_des">提供常见问题及问题反馈</string>
    <string name="problem_appeal">账号申诉</string>
    <string name="problem_appeal_des">解决无法找回密码或账号异常等问题</string>
    <string name="faceback_error">请检测售后服务应用是否存在</string>
    <string name="no_nickname">未填写昵称</string>
    <string name="gree_service">格力服务</string>
    <string name="account_set">账号设置</string>
    <string name="user_info">个人信息</string>
    <string name="login_manager">登录管理</string>
    <string name="account_safe">账号安全</string>
    <string name="other">其他</string>
    <string name="set">设置</string>
    <string name="logout">退出账号</string>
    <string name="foget_pwd">忘记密码</string>
    <string name="pwd_not_right">密码错误</string>
    <string name="pwd_enter_right">请输入正确密码</string>
    <string name="pwd">密码</string>
    <string name="input_account_pwd">请输入账号密码</string>
    <string name="nick_shield">被屏蔽</string>
    <string name="alert_clound_error">提供更好的数据保护，请你开启格力云，点击开启</string>
    <string name="alert_findphone_error">丢失手机怎么办？找查找手机功能帮到您，点击开启</string>
    <string name="alert_nickname_error">您还没有昵称，论坛的新朋友会不认识你，点击设置</string>
    <string name="alert_name_error">账号名称还没有呢！快点点击设置吧</string>
    <string name="alert_head_error">和别人不一样，要有头有面，快点点击设置</string>
    <string name="alert_userinfo_error">您的资料还没有完善，点击设置</string>
    <string name="alert_auth_error">您还没有实名认证，点击设置</string>
    <string name="alert_email_error">绑定安全邮箱，可以帮助你更好保护账号，点击设置</string>
    <string name="alert_login_error">警惕！您的账号在别的设备上登录，点击查看详细</string>
    <string name="alert_nick_auth">昵称在使用敏感字，被举报或论坛管理者屏蔽</string>
    <string name="alert_head_auth">头像在使用敏感图片，被举报或论坛管理者屏蔽</string>
    <string name="account_info">账号信息</string>
    <string name="account_name">账号名</string>
    <string name="account_name_error">账号名格式不正确</string>
    <string name="medal">勋章</string>
    <string name="user_base_info">基本信息</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="residence">居住地</string>
    <string name="no_edit">未填写</string>
    <string name="no_get">未领取</string>
    <string name="medal_num">个</string>
    <string name="edt_head">编辑头像</string>
    <string name="taking_pictures">拍照</string>
    <string name="from_grally">从图库中选择</string>
    <string name="no_select">未选择</string>
    <string name="select_plac">选择地区</string>
    <string name="select_sex">请选择性别</string>
    <string name="account_name_des_1">格力账号名可用于登录和申诉，只能设置一次</string>
    <string name="account_name_des_2">账号名设置长度6-30字母符</string>
    <string name="nick_name_des_1">昵称长度3-30个字母符，2-15汉字</string>
    <string name="nick_name_des_2">昵称三个月只能改一次</string>
    <string name="nick_name_hint">请输入昵称</string>
    <string name="nick_name_error">昵称格式不正确</string>
    <string name="birthday_error">生日不可大于当前日期</string>
    <string name="auto_location_failue">定位失败</string>
    <string name="please_select">请选择</string>
    <string name="residence_error">地址信息不完整</string>
    <string name="auto_location_prmis">自动定位将要获取你的位置信息权限，点击确定跳转</string>
    <string name="save">保存</string>
    <string name="auto_location">自动定位</string>
    <string name="address_select">手动选择</string>
    <string name="select_city">选择地区</string>
    <string name="city">省/市/区</string>
    <string name="address_info">详细地区</string>
    <string name="detail_info">详细描述</string>
    <string name="real_name_auth">实名认证</string>
    <string name="bind_e_email">绑定电子邮箱</string>
    <string name="bind_e_phone">绑定手机设备</string>
    <string name="no_bind">未领取</string>
    <string name="has_bind">已有</string>
    <string name="check_version">检查更新</string>
    <string name="download_app">下载更新</string>
    <string name="have_not_bind">未绑定</string>
    <string name="bind_manager">绑定管理</string>
    <string name="bind_phone">绑定手机</string>
    <string name="bind_email">绑定邮箱</string>
    <string name="pwd_manager">密码管理</string>
    <string name="update_pwd">修改密码</string>
    <string name="find_pwd">找回密码</string>
    <string name="auth_type">认证方式</string>
    <string name="real_auth">实名认证</string>
    <string name="no_auth">未认证</string>
    <string name="real_name">真实姓名</string>
    <string name="documents_type">证件类型</string>
    <string name="documents_num">证件号码</string>
    <string name="doc_shenfenzheng">身份证</string>
    <string name="doc_g_a_t_jiumingneidi">港澳台居民内地通行证</string>
    <string name="doc_g_a_t_shenfenzheng">港澳台身份证</string>
    <string name="doc_huzhao">护照</string>
    <string name="doc_junren_jincha">军人证/警察身份证</string>
    <string name="auth_failue">审核不通过，请检测后再次提交</string>
    <string name="real_auth_safe_tips">我们将依法保护您的个人信息安全</string>
    <string name="real_auth_des_1">根据移动互联网应用程序信息服务管理规定，需要用户进行身份信息认证，我们承诺将严格保护您的个人信息，不会对外泄露；</string>
    <string name="real_auth_des_2">实名认证后可用于账号申诉；</string>
    <string name="real_auth_des_3">注册信息只提交一次，不可修改，请慎重填写。</string>
    <string name="attention">注意</string>
    <string name="device_att_des">如果您无法识别此设备，并认为有可能他人使用你账号访问，请退出账号并修改密码。</string>
    <string name="device_name">设备名称&#160;&#160;&#160;</string>
    <string name="device_type">设备型号&#160;&#160;&#160;</string>
    <string name="device_gps">登录位置&#160;&#160;&#160;</string>
    <string name="device_login_time">登录时间&#160;&#160;&#160;</string>
    <string name="device_logout_time">退出时间&#160;&#160;&#160;</string>
    <string name="refactor">重命名</string>
    <string name="device_name_relu">名称长度1-10字汉字或2-20字母</string>
    <string name="device_name_relu2">不能使用空白格及emoji表情图标</string>
</resources>