<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/root_view_style"
    android:orientation="vertical">

    <TextView
        style="@style/layout_wrap"
        android:layout_gravity="center_horizontal"
        android:text="@string/input_new_pwd"
        android:textSize="@dimen/text_des_size"
        android:textColor="@color/gree_gray"
        android:layout_marginTop="@dimen/update_pwd_title_margintop"/>

    <com.gree.greeaccount.widget.PasswdEditView
        android:id="@+id/pwd_edt"
        android:layout_marginTop="@dimen/update_pwd_title_marginbottom"
        style="@style/edt_layout" />

    <com.gree.greeaccount.widget.PasswdEditView
        android:id="@+id/pwd_confm_edt"
        style="@style/edt_layout" />

    <TextView
        style="@style/txt_sub_des_with_dot"
        android:text="@string/pwd_type" />

    <TextView
        style="@style/txt_sub_des_with_dot"
        android:text="@string/pwd_lenght" />

    <TextView
        style="@style/txt_sub_des_with_dot"
        android:text="@string/device_name_relu2" />

    <Button
        android:id="@+id/next_btn"
        style="@style/btn_blue"
        android:text="@string/next_step" />

</LinearLayout>